Removed JDK 5 dependency introduced by the previous commit (thanks to Giulio)
svn path=/trunk/eXist-1.0/; revision=2107


Former-commit-id: 43c18b3c17a020cfff349a866896cc8ee5725afa